--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
               </div>
               
               <div id='positionRight'><!--id=linkR change to class-->
-                <a class='nav-link' href="#footer">Anuncio</a>
+                <a class='nav-link' href="#background-content">Anuncio</a>
                 <a class='nav-link' href="#video">Video</a>
-                <a class='nav-link' href="#signIn">Footer</a>
+                <a class='nav-link' href="#footer">Footer</a>
               </div>
             </div>
         </nav>
